# ReadmeRescue

./: .gitignore  .replit  INSTALL_INSTRUCTIONS.txt  MIGRATION_SUMMARY.md  README.md  SIMPLE_FLASK_INSTALL.bat  WINDOWS_SETUP.md  app.py  install_and_run.bat  install_ffmpeg.ps1  install_flask_windows.bat  main.py  pyproject.toml  replit.md  setup.py  windows_quick_install.bat  windows_requirements.txt
attached_assets/: README_1751115588554.md  install_and_run_1751115578524.bat  main_1751115584518.py  requirements_1751115593301.txt
static/: index.html  script.js  style.css
voice_video_cutter_windows/: README.md  START_HERE.txt  WINDOWS_TEST_INSTRUCTIONS.txt  fix_speech_recognition.py  install_and_run.bat  install_ffmpeg.ps1  install_pyaudio.bat  main.py  requirements.txt  setup.py
windows_deployment/: GIT_BASH_GUIDE.txt  MANUAL_SETUP.txt  README.md  START_HERE.txt  app.py  diagnose_python.bat  fix_python_gitbash.sh  fix_python_installation.bat  git_bash_install.sh  install_and_run.bat  install_and_run.ps1  install_and_run_direct.bat  install_and_run_python312.bat  install_and_run_userpath.bat  install_ffmpeg.ps1  quick_install.bat  requirements.txt  simple_install.bat  test_python.bat  test_python_path.bat  universal_install.bat
windows_deployment/templates/: index.html
